# Unstable-Singularity-Detector

./: .gitignore  CHANGELOG.md  CHANGELOG_v1.4.0.md  README.md  RELEASE_NOTES_v1.4.0.md  RELEASE_NOTES_v1.4.1.md  pyproject.toml  requirements.txt  setup.py
scripts/: cfd_bridge.py
src/: experiment_tracker.py  gauss_newton_optimizer_enhanced.py  multistage_training.py  pinn_solver.py  unstable_singularity_detector.py  visualization_enhanced.py
src/integration/: __init__.py  cfd_bridge.py
src/utils/: __init__.py  certificates.py
tests/: test_cfd_bridge.py  test_detector.py  test_residual_certificate.py
